# blempy

./: Dockerfile  README-pypi.md  README.md  blempy-setup.py  pyproject.toml  requirements-nobpy.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: test_all.yml
blempy/: __init__.py
docs/: header.template  index.html  index.md
tests/: test_blempy.py
