# see: https://github.com/microsoft/pylance-release/issues/5457 it is to support Blenders properties
[tool.pyright]
reportInvalidTypeForm = false


[project]
name = "blempy"
version = "0.4.6"
authors = [
  { name="varkenvarken", email="author@example.com" },
]
description = "A small example package"
readme = "README-pypi.md"
requires-python = ">=3.11"
classifiers = [
        "Development Status :: 4 - Beta",
        "Programming Language :: Python :: 3.11",
        "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/varkenvarken/blempy"
Issues = "https://github.com/varkenvarken/blempy/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"